# arac

./: .gitignore  CLAUDE.md  LICENSE  README.md  check_adk.py  pyproject.toml  test_config.py
examples/basic_project/: .env.example  README.md
examples/basic_project/.arclient/: config.json
examples/basic_project/.arclient/prompts/: base_agent.md  coordinator.md  meeting_agent.md
examples/basic_project/Meetings/: README.md
src/arac/: __init__.py  agent.py
src/arac/agents/: __init__.py  base_agent.py  generic_agent.py  meeting_agent.py
src/arac/core/: __init__.py  agent_factory.py  config_loader.py  coordinator.py
src/arac/integrations/: __init__.py  akashic_mcp.py  mcp_filesystem.py  multi_model.py
src/arac/utils/: __init__.py  project_discovery.py  validation.py
